--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            height: 100%;
         }
 
         #fileInput {
             margin-bottom: 20px;
+            padding-top: 1rem;
         }
 
         canvas {
